--- a/.env.example
+++ b/.env.example
@@ -36,8 +36,9 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
-SESSION_DOMAIN=exilednoname.com
-SESSION_SECURE_COOKIE=false
+#SESSION_DOMAIN=
+#SESSION_SECURE_COOKIE=
+#SANCTUM_STATEFUL_DOMAINS=
 
 MEMCACHED_HOST=127.0.0.1
 
