--- a/.env.example
+++ b/.env.example
@@ -36,9 +36,8 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
-#SESSION_DOMAIN=
-#SESSION_SECURE_COOKIE=
-#SANCTUM_STATEFUL_DOMAINS=
+SESSION_DOMAIN=exilednoname.com
+SESSION_SECURE_COOKIE=false
 
 MEMCACHED_HOST=127.0.0.1
 
